# GPU_Rust_NN

./: .gitignore  Cargo.toml  README.md  main.rs  network.rs  nothing  tensor.rs
examples/simple_mnist/: download_mnist.rs  main.rs  mnist.rs
nn_core/: Cargo.toml
nn_core/examples/fake_dql_env/: main.rs
nn_core/examples/simple_mnist/: main.rs
nn_core/src/: lib.rs
nn_core/src/deep_q_learning/: deeq_q_network.rs  mod.rs  target_q_pipeline.wgsl
nn_core/src/general/: activation.rs  layer.rs  loss.rs  mod.rs  network.rs  onnx_io.rs  pipeline.rs  tensor.rs
nn_core/src/general/shaders/activation_and_bias/: relu.wgsl  softmax.wgsl  tanh.wgsl
nn_core/src/general/shaders/backp_activation/: softmax.wgsl  tanh_backp.wgsl
nn_core/src/general/shaders/loss/: cross_entropy_softmax.wgsl
python/: Cargo.toml
python/src/: lib.rs
python_example/: main.py
shaders/: relu_and_bias.wgsl  weight_bias_grad.wgsl
src/: activation.rs  layer.rs  lib.rs  loss.rs  network.rs  old_layer.rs  pipeline.rs  tensor.rs  utils.rs
src/shaders/: apply_gradient.wgsl  loss.wgsl  matvec.wgsl  matvec_transposed.wgsl
src/shaders/activation_and_bias/: sigmoid.wgsl
src/shaders/backp_activation/: leaky_relu_backp.wgsl  relu_backp.wgsl  sigmoid_backp.wgsl
