[package]
name = "nn_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
byteorder = "1.5.0"
flate2 = "1.1.8"
onnx = "0.1.0"
pollster = "0.4.0"
rand = "0.9.2"
reqwest = "0.13.1"
tokio = { version = "1.49.0", features = ["full"] }
wgpu = "28.0.0"
prost = "0.13"
